// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
package gedit.payment;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.payment.grpc";
option java_outer_classname = "PaymentProto";
option objc_class_prefix = "PAYMENT";

import "gedit/common.proto";

// The payment service definition.
service PaymentApi {

    rpc Prepare (PreparPaymentRequest) returns (PreparePaymentResponse) {
    }

    rpc Create (CreatePaymentRequest) returns (PaymentResponse) {
    }

    rpc Get (GetPaymentRequest) returns (PaymentResponse) {
    }

    rpc List (ListPaymentRequest) returns (stream PaymentResponse) {
    }

    rpc ListMy (ListMyPaymentRequest) returns (stream PaymentResponse) {
    }

}

message PreparPaymentRequest{
    string payeeStoreUuid = 13;
    int32 shouldPay = 15; //应付金额 = 实付金额 + 实付积分等价金额
}

message PreparePaymentResponse{
    Status status = 999;

    PreparePayment preparePayment = 1;

}

message PreparePayment{
    int32 shouldPay = 15; //应付金额 = 实付金额 + 实付积分等价金额
    int32 actualPay = 16; //实付金额
    int32 pointsPay = 17; //实付积分代替金额
    int32 points = 18; //返还积分
}

message CreatePaymentRequest {
    //only called by myself，即支付人是我
    //payerUuid
    string payeeUuid = 12; //收款人
    string payeeStoreUuid = 13;
    string payeeWorkerUuid = 14;
    int32 shouldPay = 15; //应付金额 = 实付金额 + 实付积分等价金额
    int32 actualPay = 16; //实付金额
    int32 pointsPay = 17; //实付积分代替金额
    PaymentChannel channel = 25;//支付类型
}

message GetPaymentRequest {
    string uuid = 1; //支付单编号
}

message ListPaymentRequest {
    //only called by manager
    string payerUuid = 11; //支付人
    string payeeUuid = 12; //收款人
    string payeeStoreUuid = 13; //收款店铺
    int32 from = 100;
    int32 size = 101;
}

message ListMyPaymentRequest {
    //only called by myself
    bool includePayee = 1;
    bool includePayer = 2;
    int32 from = 100;
    int32 size = 101;
}

message PaymentResponse {
    Status status = 999;

    Payment payment = 1;
}

message Payment {
    string uuid = 1; //支付单编号

    string payerUuid = 11; //支付人
    string payeeUuid = 12; //收款人
    string payeeStoreUuid = 13;
    string payeeWorkerUuid = 14;
    //create following info when return from PaymentChannel支付宝、微信等返回时
    int32 shouldPay = 15; //应付金额 = 实付金额 + 实付积分等价金额
    int32 actualPay = 16; //实付金额
    int32 pointsPay = 17; //实付积分代替金额
    int32 points = 18; //返还积分
    enum Status {
        NEW = 0;
        INPROGRESS = 50;
        FAILED = 51;
        OK = 52;
    }

    PaymentChannel channel = 26; //支付通道如支付宝、微信、云闪付
    string channelOrderUuid = 27; //预付单编号，可能由支付通道返回的或平台产生的

    int64 created = 40;

}