// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
package gedit.payment;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.payment.query.grpc";
option java_outer_classname = "PaymentQueryProto";
option objc_class_prefix = "GDA";

import "gedit/payment/payment_common.proto";

// The payment query service definition.
service PaymentQueryApi {

    rpc Get (GetPaymentRequest) returns (PaymentResponse) {
    }

    rpc List (ListPaymentRequest) returns (stream PaymentResponse) {
    }

    rpc ListMyPayerPayment (ListMyPayerPaymentRequest) returns (stream PaymentResponse) {
        //only called by me，获取我的付款单
    }

    rpc ListMyPayeePayment (ListMyPayeePaymentRequest) returns (stream PaymentResponse) {
        //only called by me，获取我的收款单
    }

}


message GetPaymentRequest {
    string uuid = 1; //支付单编号
}

message ListPaymentRequest {
    //only called by manager
    string payerUuid = 10; //顾客
    string payeePaymentCode = 11; //收款码
    string payeeUuid = 12; //收款人（其实是店主）
    string payeeStoreUuid = 13; //收款店铺
    string payeeWorkerUuid = 14; //收银员
    bool isAnd = 24;
    int32 from = 100;
    int32 size = 101;
}

message ListMyPayerPaymentRequest {
    //only called by myself
    int32 from = 100;
    int32 size = 101;
}

message ListMyPayeePaymentRequest {
    //only called by myself
    int32 from = 100;
    int32 size = 101;
}
